--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,11 +2,26 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Login</title>
-    <link rel="stylesheet" th:href="@{/css/styles.css}">
+    <!-- Bootstrap CSS (CDN) -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <h1>Login</h1>
-    <a th:href="@{/oauth2/authorization/google}">Login with Google</a>
-    <p>Don't have an account? <a th:href="@{/users/register}">Register here</a></p>
+    <div class="container d-flex justify-content-center align-items-center min-vh-100">
+        <div class="card shadow-lg p-4" style="width: 400px;">
+            <h3 class="text-center mb-3">Login</h3>
+            <div class="text-center">
+                <a th:href="@{/oauth2/authorization/google}" class="btn btn-danger btn-lg w-100">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Google_2015_logo.svg" alt="Google Logo" width="20">
+                    Login with Google
+                </a>
+            </div>
+            <p class="text-center mt-3">
+                Don't have an account? <a th:href="@{/users/register}">Register here</a>
+            </p>
+        </div>
+    </div>
+
+    <!-- Bootstrap JS (CDN) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
